--- a/index.html
+++ b/index.html
@@ -9258,7 +9258,62 @@
 
       </div>
       <div id="CLIMoLI" class="resultConditional" style="display:none;">
-        Cool light i mono light i
+
+      <div class="baseResult">
+          <label class="baseHeader">Dust</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/TVFZifX.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Glaucous</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/yNRGU3Y.png">
+            <div class="resultGenetics">
+            Cool Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Honeydew</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/uEt2Wp0.png">
+            <div class="resultGenetics">
+            Cool Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Quartz</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/B5VHzI9.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Snow</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/M3tkaUg.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">White</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/tSDMQFv.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+
       </div>
       <div id="CLICLIIMoLIMoLII" class="resultConditional" style="display:none;">
         Cool light i cool light ii mono light i mono light ii
