--- a/index.html
+++ b/index.html
@@ -9316,13 +9316,376 @@
 
       </div>
       <div id="CLICLIIMoLIMoLII" class="resultConditional" style="display:none;">
-        Cool light i cool light ii mono light i mono light ii
+
+      <div class="baseResult">
+          <label class="baseHeader">Dust</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/TVFZifX.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Glaucous</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/yNRGU3Y.png">
+            <div class="resultGenetics">
+            Cool Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Honeydew</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/uEt2Wp0.png">
+            <div class="resultGenetics">
+            Cool Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Lavender</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/NTwNGu7.png">
+            <div class="resultGenetics">
+            Cool Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Melchior</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/ahITg2l.png">
+            <div class="resultGenetics">
+            Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Nepheline</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/K0x0tGf.png">
+            <div class="resultGenetics">
+            Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Pale</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/61UotsO.png">
+            <div class="resultGenetics">
+            Cool Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Quartz</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/B5VHzI9.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Rime</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/wmRUKqH.png">
+            <div class="resultGenetics">
+            Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Siqoq</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/r1JdfDQ.png">
+            <div class="resultGenetics">
+            Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Sky</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/AVbY7aJ.png">
+            <div class="resultGenetics">
+            Cool Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Snow</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/M3tkaUg.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Titanium</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/SW7a6wo.png">
+            <div class="resultGenetics">
+            Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">White</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/tSDMQFv.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+
       </div>
       <div id="CLMoL" class="resultConditional" style="display:none;">
-        Cool light mono light
+
+      <div class="baseResult">
+          <label class="baseHeader">Dust</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/TVFZifX.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Glaucous</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/yNRGU3Y.png">
+            <div class="resultGenetics">
+            Cool Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Honeydew</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/uEt2Wp0.png">
+            <div class="resultGenetics">
+            Cool Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Lavender</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/NTwNGu7.png">
+            <div class="resultGenetics">
+            Cool Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Melchior</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/ahITg2l.png">
+            <div class="resultGenetics">
+            Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Nepheline</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/K0x0tGf.png">
+            <div class="resultGenetics">
+            Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Pale</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/61UotsO.png">
+            <div class="resultGenetics">
+            Cool Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Quartz</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/B5VHzI9.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Rime</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/wmRUKqH.png">
+            <div class="resultGenetics">
+            Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Siqoq</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/r1JdfDQ.png">
+            <div class="resultGenetics">
+            Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Sky</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/AVbY7aJ.png">
+            <div class="resultGenetics">
+            Cool Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Snow</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/M3tkaUg.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Titanium</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/SW7a6wo.png">
+            <div class="resultGenetics">
+            Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">White</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/tSDMQFv.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+
       </div>
       <div id="CLICMIMoLIMoMI" class="resultConditional" style="display:none;">
-        Cool light i cool medium i mono light i mono medium i
+
+       <div class="baseResult">
+          <label class="baseHeader">Ashen</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/UB4svAz.png">
+            <div class="resultGenetics">
+            Monochrome Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Birch</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/vKOFAx4.png">
+            <div class="resultGenetics">
+            Monochrome Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Blue</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/UtaDNir.png">
+            <div class="resultGenetics">
+            Cool Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Dust</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/TVFZifX.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Glaucous</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/yNRGU3Y.png">
+            <div class="resultGenetics">
+            Cool Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Gray Lighter</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/GdPFPyl.png">
+            <div class="resultGenetics">
+            Monochrome Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Honeydew</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/uEt2Wp0.png">
+            <div class="resultGenetics">
+            Cool Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Howlite</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/usf8fJa.png">
+            <div class="resultGenetics">
+            Monochrome Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Khaki</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/54xTaes.png">
+            <div class="resultGenetics">
+            Cool Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Quartz</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/B5VHzI9.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Snow</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/M3tkaUg.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">White</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/tSDMQFv.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+
       </div>
       <div id="CLICLIICMICMIIMoLIMoLIIMoMIMoMII" class="resultConditional" style="display:none;">
         Cool light i cool light ii cool medium i cool medium ii mono light i mono light ii mono medium i mono medium ii
