--- a/index.html
+++ b/index.html
@@ -9944,13 +9944,484 @@
 
       </div>
       <div id="CLCMMoLMoM" class="resultConditional" style="display:none;">
-        Cool light cool medium mono light mono medium
+
+      <div class="baseResult">
+          <label class="baseHeader">Acanthite</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/BCne6DY.png">
+            <div class="resultGenetics">
+            Monochrome Medium II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Argent</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/nzhiwik.png">
+            <div class="resultGenetics">
+            Monochrome Light III
+            </div>
+            </div>
+        </div>
+       <div class="baseResult">
+          <label class="baseHeader">Ashen</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/UB4svAz.png">
+            <div class="resultGenetics">
+            Monochrome Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Birch</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/vKOFAx4.png">
+            <div class="resultGenetics">
+            Monochrome Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Blue</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/UtaDNir.png">
+            <div class="resultGenetics">
+            Cool Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Chert</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/9pCmxPj.png">
+            <div class="resultGenetics">
+            Monochrome Medium II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Chromium</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/gbO8WWW.png">
+            <div class="resultGenetics">
+            Monochrome Light III
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Diorite</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/IJ0Wz6x.png">
+            <div class="resultGenetics">
+            Cool Medium II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Dust</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/TVFZifX.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Flint</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/KgjAp09.png">
+            <div class="resultGenetics">
+            Monochrome Medium III
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Galena</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/eRH3QqW.png">
+            <div class="resultGenetics">
+            Cool Medium II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Glaucous</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/yNRGU3Y.png">
+            <div class="resultGenetics">
+            Cool Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Gray Lighter</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/GdPFPyl.png">
+            <div class="resultGenetics">
+            Monochrome Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Grulla</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/83NqfKO.png">
+            <div class="resultGenetics">
+            Cool Medium III
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Honeydew</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/uEt2Wp0.png">
+            <div class="resultGenetics">
+            Cool Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Howlite</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/usf8fJa.png">
+            <div class="resultGenetics">
+            Monochrome Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Khaki</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/54xTaes.png">
+            <div class="resultGenetics">
+            Cool Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Lavender</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/NTwNGu7.png">
+            <div class="resultGenetics">
+            Cool Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Maltese</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/qGZmg1T.png">
+            <div class="resultGenetics">
+            Cool Medium II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Melchior</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/ahITg2l.png">
+            <div class="resultGenetics">
+            Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Nepheline</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/K0x0tGf.png">
+            <div class="resultGenetics">
+            Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Opal</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/cF3mMQF.png">
+            <div class="resultGenetics">
+            Cool Light III
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Pale</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/61UotsO.png">
+            <div class="resultGenetics">
+            Cool Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Quartz</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/B5VHzI9.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Rime</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/wmRUKqH.png">
+            <div class="resultGenetics">
+            Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Silver</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/6ZR3rcg.png">
+            <div class="resultGenetics">
+            Monochrome Medium II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Siqoq</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/r1JdfDQ.png">
+            <div class="resultGenetics">
+            Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Sky</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/AVbY7aJ.png">
+            <div class="resultGenetics">
+            Cool Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Snow</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/M3tkaUg.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Steele</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/hLB1yr7.png">
+            <div class="resultGenetics">
+            Monochrome Medium II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Sterling</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/mZyWhaZ.png">
+            <div class="resultGenetics">
+            Monochrome Medium II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Striped Flint</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/UE17l34.png">
+            <div class="resultGenetics">
+            Monochrome Medium III
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Titanium</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/SW7a6wo.png">
+            <div class="resultGenetics">
+            Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">White</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/tSDMQFv.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+
       </div>
       <div id="CLICMICDIMoLIMoMIMoDI" class="resultConditional" style="display:none;">
-        cool light i cool medium i cool dark i mono light i mono medium i mono dark i
+
+       <div class="baseResult">
+          <label class="baseHeader">Ashen</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/UB4svAz.png">
+            <div class="resultGenetics">
+            Monochrome Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Birch</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/vKOFAx4.png">
+            <div class="resultGenetics">
+            Monochrome Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Black</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/UjrXUG9.png">
+            <div class="resultGenetics">
+            Monochrome Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Blue</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/UtaDNir.png">
+            <div class="resultGenetics">
+            Cool Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Dust</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/TVFZifX.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Glaucous</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/yNRGU3Y.png">
+            <div class="resultGenetics">
+            Cool Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Gray</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/BecFXBD.png">
+            <div class="resultGenetics">
+            Monochrome Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Gray Darker</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/bfO9UnI.png">
+            <div class="resultGenetics">
+            Monochrome Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Gray Lighter</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/GdPFPyl.png">
+            <div class="resultGenetics">
+            Monochrome Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Honeydew</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/uEt2Wp0.png">
+            <div class="resultGenetics">
+            Cool Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Howlite</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/usf8fJa.png">
+            <div class="resultGenetics">
+            Monochrome Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Jet</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/egCfGDi.png">
+            <div class="resultGenetics">
+            Monochrome Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Khaki</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/54xTaes.png">
+            <div class="resultGenetics">
+            Cool Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Marengo</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/gn6f1Mc.png">
+            <div class="resultGenetics">
+            Cool Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Quartz</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/B5VHzI9.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Skarn</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/Rg7ttXx.png">
+            <div class="resultGenetics">
+            Muted Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Snow</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/M3tkaUg.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">White</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/tSDMQFv.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+
       </div>
       <div id="CLICLIICMICMIICDICDIIMoLIMoLIIMoMIMoMIIMoDIMoDII" class="resultConditional" style="display:none;">
-        Cool light i cool light ii cool medium i cool medium ii cool dark i cool dark ii mono light i mono light ii mono medium i mono medium ii mono dark i mono dark ii
+
+
       </div>
       <div id="CoolMonochrome" class="resultConditional" style="display:none;">
         Cool monochrome
