--- a/index.html
+++ b/index.html
@@ -9448,6 +9448,24 @@
       <div id="CLMoL" class="resultConditional" style="display:none;">
 
       <div class="baseResult">
+          <label class="baseHeader">Argent</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/nzhiwik.png">
+            <div class="resultGenetics">
+            Monochrome Light III
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Chromium</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/gbO8WWW.png">
+            <div class="resultGenetics">
+            Monochrome Light III
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
           <label class="baseHeader">Dust</label>
             <div>
               <img class="resultImage" src="https://i.imgur.com/TVFZifX.png">
@@ -9498,6 +9516,15 @@
               <img class="resultImage" src="https://i.imgur.com/K0x0tGf.png">
             <div class="resultGenetics">
             Monochrome Light II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Opal</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/cF3mMQF.png">
+            <div class="resultGenetics">
+            Cool Light III
             </div>
             </div>
         </div>
