--- a/index.html
+++ b/index.html
@@ -17055,7 +17055,368 @@
         Losna moonlight medium dark
       </div>
       <div id="LosnaDark" class="resultConditional" style="display:none;">
-        Losna dark
+
+      <div class="baseResult">
+          <label class="baseHeader">Amber</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/99B5GKw.png">
+            <div class="resultGenetics">
+            Warm Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Auburn</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/HY21KVc.png">
+            <div class="resultGenetics">
+            Warm Dark II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Biotite</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/kypCiwu.png">
+            <div class="resultGenetics">
+            Monochrome Dark II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Black</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/UjrXUG9.png">
+            <div class="resultGenetics">
+            Monochrome Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Bronze</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/RauQbIC.png">
+            <div class="resultGenetics">
+            Muted Dark III
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Brown</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/FmNc7Zv.png">
+            <div class="resultGenetics">
+            Warm Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Caramel</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/bk4WIP5.png">
+            <div class="resultGenetics">
+            Muted Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Chestnut</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/8ChBF6e.png">
+            <div class="resultGenetics">
+            Muted Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Chocolate</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/owMsjJ8.png">
+            <div class="resultGenetics">
+            Muted Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Cocoa</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/z7gtdN9.png">
+            <div class="resultGenetics">
+            Muted Dark II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Dark Brown</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/rZFoUKN.png">
+            <div class="resultGenetics">
+            Muted Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Denim</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/MaludZI.png">
+            <div class="resultGenetics">
+            Cool Dark II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Dinar</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/lzFMFyw.png">
+            <div class="resultGenetics">
+            Warm Dark II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Dravite</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/szz9gHj.png">
+            <div class="resultGenetics">
+            Warm Dark II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Ebony</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/E6yS5Lv.png">
+            <div class="resultGenetics">
+            Muted Dark II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Gray</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/BecFXBD.png">
+            <div class="resultGenetics">
+            Monochrome Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Gray Darker</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/bfO9UnI.png">
+            <div class="resultGenetics">
+            Monochrome Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Henna</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/hx9yxAp.png">
+            <div class="resultGenetics">
+            Warm Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Iridium</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/JvB39KW.png">
+            <div class="resultGenetics">
+            Monochrome Dark III
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Jet</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/egCfGDi.png">
+            <div class="resultGenetics">
+            Monochrome Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Lilac</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/FdGAIGv.png">
+            <div class="resultGenetics">
+            Cool Dark II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Liver</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/ojG2J0r.png">
+            <div class="resultGenetics">
+            Warm Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Losna</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/ZqxNM4J.png">
+            <div class="resultGenetics">
+            Special Dark *
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Marengo</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/gn6f1Mc.png">
+            <div class="resultGenetics">
+            Cool Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Nocturne</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/ivXlOZY.png">
+            <div class="resultGenetics">
+            Cool Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Obsidian</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/E1jxQ5n.png">
+            <div class="resultGenetics">
+            Cool Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Onyx</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/ADmZ8i9.png">
+            <div class="resultGenetics">
+            Cool Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Oroide</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/eMLAbP4.png">
+            <div class="resultGenetics">
+            Muted Dark II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Pecan</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/sCdEYDn.png">
+            <div class="resultGenetics">
+            Cool Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Pewter</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/uMD9drQ.png">
+            <div class="resultGenetics">
+            Cool Dark I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Pyrope</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/wvQG8dA.png">
+            <div class="resultGenetics">
+            Warm Light III
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Realgar</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/KmuUxQ6.png">
+            <div class="resultGenetics">
+            Monochrome Light I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Russet</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/cJzgnSv.png">
+            <div class="resultGenetics">
+            Warm Dark II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Sarder</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/o14S9KA.png">
+            <div class="resultGenetics">
+            Warm Dark II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Seal</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/HdiGZ4o.png">
+            <div class="resultGenetics">
+            Muted Dark III
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Sepia</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/EuzVErk.png">
+            <div class="resultGenetics">
+            Muted Dark II
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Serpentine</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/WkGLAXq.png">
+            <div class="resultGenetics">
+            Cool Dark III
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Skarn</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/Rg7ttXx.png">
+            <div class="resultGenetics">
+            Muted Medium I
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Slate</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/ApFFD3u.png">
+            <div class="resultGenetics">
+            Monochrome Dark III
+            </div>
+            </div>
+        </div>
+      <div class="baseResult">
+          <label class="baseHeader">Sphalerite</label>
+            <div>
+              <img class="resultImage" src="https://i.imgur.com/w0k2rvx.png">
+            <div class="resultGenetics">
+            Monochrome Dark II
+            </div>
+            </div>
+        </div>
+
       </div>
 
 
