--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <div class="tabcontainer">
 <div class="tab">
   <button class="tablinks active" onclick="openCalculator(event, 'BasePredictor')" id="defaultOpen">Base Predictor</button>
-    <button class="tablinks active" onclick="openCalculator(event, 'Base')" id="defaultOpen">Base Obtention References</button>
-    <button class="tablinks active" onclick="openCalculator(event, 'Base')" id="defaultOpen">Base Category References</button>
-  <button class="tablinks" onclick="openCalculator(event, 'Markings')">Marking Predictor</button>
-    <button class="tablinks" onclick="openCalculator(event, 'Markings')">Marking Tier References</button>
-  <button class="tablinks" onclick="openCalculator(event, 'Eyes')">Eye Predictor</button>
-    <button class="tablinks" onclick="openCalculator(event, 'Eyes')">Eye Obtention References</button>
+    <button class="tablinks active" onclick="openCalculator(event, 'BaseObtention')" id="defaultOpen">Base Obtention</button>
+    <button class="tablinks active" onclick="openCalculator(event, 'BaseCategory')" id="defaultOpen">Base Category</button>
+  <button class="tablinks" onclick="openCalculator(event, 'MarkingPredictor')">Marking Predictor</button>
+    <button class="tablinks" onclick="openCalculator(event, 'MarkingTiers')">Marking Tiers</button>
+  <button class="tablinks" onclick="openCalculator(event, 'EyePredictor')">Eye Predictor</button>
+    <button class="tablinks" onclick="openCalculator(event, 'EyeObention')">Eye Obtention</button>
   
 </div>
 
@@ -52335,58 +52335,35 @@
 
   </div>
 
-<!-- Markings Calculator -->
-<div id="Markings" class="tabcontent">
-  <h2>Lifetime Heats Calculator</h2>
-  <p>This calculator will tell you have many heats your wolf has left before they die. This assumes that your wolf is always bred on the first day of their heat. If you plan on instant delivering every one of your wolf's litters right after they are bred, select the checkbox below that indicates this.</p> 
-  <h3>
-Input your wolf's information here!
-</h3>
-<p>
-My wolf is <input type="number" id="year2" min="1" max ="7"> years and <input type="number" id="month2" min="0" max ="11.5" step="0.5"> months old.<br>
-They current have a <input type="number" id="cooldown2" min="1" max ="20">-rollover breeding cooldown.<br>
- <input type="checkbox" id="IPD">Instant deliver every litter?
-</p>
-<div class="small">
-<i>If your wolf is currently nursing, you can check exactly how many rollovers are left in their breeding cooldown by hovering over or tapping on the hourglass icon by their info on your den page! Their nesting period is included in their breeding cooldown.</i></div>
-<br><br>
-        <button onclick="calculateLifetime()">Calculate Lifetime Heats</button> <br>
-        <p id="LifetimeHeatsCalculation"><br></p>
+<!-- Base Obtention References -->
+<div id="BaseObtention" class="tabcontent">
+Text
 </div>
 
-<!-- Eyes Calculator -->
-<div id="Eyes" class="tabcontent">
-  <h2>Unbred/Male Heats Calculator</h2>
-  <p>Every wolf, regardless of sex, has a heat cycle! It doesn't show on male wolves, but it coorelates to their age. Depending on their age, a male wolf might go immediately into heat when they're sex changed. This calculator will tell you if your male wolf would be in heat if you were to sex change them, or how far away their heat would be!<br><br>Using an aging crystal on a pup or adolescent messes with this heat cycle. Aging crystal functionality coming soon!<br></p> 
-  <h3>
-Input your wolf's information here!
-</h3>
-<p>
-My wolf is <input type="number" id="year3" min="1" max ="7"> years and <input type="number" id="month3" min="0" max ="11.5" step="0.5"> months old.<br>
-</p>
-<br><br>
-        <button onclick="calculateMale()">Calculate Heat</button> <br>
-        <p id="UnbredHeatsCalculation"><br></p>
-  </div>
-  
+<!-- Base Category References -->
+<div id="BaseCategory" class="tabcontent">
+Text
+</div>
 
-  <!-- Pup Predictor Calculator -->
-<div id="pupPredictor" class="tabcontent">
-  <h2>Unbred/Male Heats Calculator</h2>
-  <p>Every wolf, regardless of sex, has a heat cycle! It doesn't show on male wolves, but it coorelates to their age. Depending on their age, a male wolf might go immediately into heat when they're sex changed. This calculator will tell you if your male wolf would be in heat if you were to sex change them, or how far away their heat would be!<br><br>Using an aging crystal on a pup or adolescent messes with this heat cycle. Aging crystal functionality coming soon!<br></p> 
-  <h3>
-Input your wolf's information here!
-</h3>
-<p>
-My wolf is <input type="number" id="year3" min="1" max ="7"> years and <input type="number" id="month3" min="0" max ="11.5" step="0.5"> months old.<br>
-</p>
-<br><br>
-        <button onclick="calculateMale()">Calculate Heat</button> <br>
-        <p id="UnbredHeatsCalculation"><br></p>
-  </div>
+<!-- Marking Predictor -->
+<div id="MarkingPredictor" class="tabcontent">
+Text
 </div>
-<div class="footer">
-<p>
-Brought to you by the <a href="https://www.wolvden.com/chatter/topic/258">Grouse House</a>. Not officially affiliated with Wolvden. Message <a href="https://www.wolvden.com/profile/201">Maddie (#201)</a> with any questions, concerns, bugs etc, or comment on our <a href="https://www.wolvden.com/chatter/topic/46913">forum topic!</a> All images used on this page are property of <a href="https://www.wolvden.com">Wolvden.com</a>.</p>
+
+<!-- Marking Tiers -->
+<div id="MarkingTiers" class="tabcontent">
+Text
 </div>
+
+<!-- Eye Predictor -->
+<div id="EyePredictor" class="tabcontent">
+Text
+</div>
+
+<!-- Eye Obtention -->
+<div id="EyeObtention" class="tabcontent">
+Text
+</div>
+
+
 </body>
