--- a/index.html
+++ b/index.html
@@ -52365,5 +52365,10 @@ Text
 Text
 </div>
 
+</div>
+<div class="footer">
+<p>
+Brought to you by the <a href="https://www.wolvden.com/chatter/topic/258">Grouse House</a>. Not officially affiliated with Wolvden. Message <a href="https://www.wolvden.com/profile/201">Maddie (#201)</a> with any questions, concerns, bugs etc, or comment on our <a href="https://www.wolvden.com/chatter/topic/46913">forum topic!</a> All images used on this page are property of <a href="https://www.wolvden.com">Wolvden.com</a>.</p>
+</div>
 
 </body>
