--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <button class="tablinks" onclick="openCalculator(event, 'MarkingPredictor')">Marking Predictor</button>
     <button class="tablinks" onclick="openCalculator(event, 'MarkingTiers')">Marking Tiers</button>
   <button class="tablinks" onclick="openCalculator(event, 'EyePredictor')">Eye Predictor</button>
-    <button class="tablinks" onclick="openCalculator(event, 'EyeObention')">Eye Obtention</button>
+    <button class="tablinks" onclick="openCalculator(event, 'EyeObtention')">Eye Obtention</button>
   
 </div>
 
