--- a/index.html
+++ b/index.html
@@ -54030,27 +54030,27 @@
 
 <!-- Base Category References -->
 <div id="BaseCategory" class="tabcontent">
-Text
+Coming soon!
 </div>
 
 <!-- Marking Predictor -->
 <div id="MarkingPredictor" class="tabcontent">
-Text
+Coming soon!
 </div>
 
 <!-- Marking Tiers -->
 <div id="MarkingTiers" class="tabcontent">
-Text
+Coming soon!
 </div>
 
 <!-- Eye Predictor -->
 <div id="EyePredictor" class="tabcontent">
-Text
+Coming soon!
 </div>
 
 <!-- Eye Obtention -->
 <div id="EyeObtention" class="tabcontent">
-Text
+Coming soon!
 </div>
 
 </div>
